# azure-function-rust-demo

./: .funcignore  .gitignore  Cargo.toml  host.json
src/: main.rs
