[package]
name = "azure-function-rust"
version = "0.1.0"
authors = ["Victor Verstappen <victor.verstappen@iddinkgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }